[package]
name = "extend_map"
description = "A type to map or filter values passed into an Extend type before extending."
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.14.4"
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/extend_map"
rust-version = "1.56.1"
edition = "2021"

[dependencies]
